2005/01/04 15:15 (-0400) rwmcfa1

	* t/1.t: we need to make it clear to perl that g_get_user_data_dir and
	friends are functions or we'll get syntax errors and test failures when
	no symbols with those names are found (even though they'll be skipped.)

2005/01/02 16:31 (+0100) kaffeetisch

	* GParamSpec.xs, TODO: Remove documentation that doesn't apply
	anymore.

	* GUtils.xs, t/1.t: Bind and test g_get_user_data_dir,
	g_get_user_config_dir, g_get_user_cache_dir,
	g_get_system_data_dirs, g_get_system_config_dirs, and
	g_get_language_names.

2004/11/29 21:28 (+0100) kaffeetisch

	* Makefile.PL: Correct the unstable warning message to say 1.06x
	instead of 1.04x.

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.071.

2004/11/01 21:22 (+0100) kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.070.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Glib.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/10/20 19:32 (+0200) kaffeetisch

	* GParamSpec.xs, e.t: Add and test support for GParamSpecUnichar.

2004/10/17 12:27 (+0200) kaffeetisch

	* doctypes: Add a description for gunichar.

2004/10/14 15:27 (-0400) muppetman

	* Makefile.PL: use PREREQ_PM in both WriteMakefile calls, so META.yml
	gets created properly.

2004/09/27 09:35 (-0400) muppetman

	* README, NEWS, Glib.pm: stable release 1.061

2004/09/19 23:31 (+0200) kaffeetisch

	* GBoxed.xs: Use gperl_format_variable_for_output when croaking in
	the unwrap function.

	* GType.xs, Glib.xs: Fix two signedness issues.

	* MakeHelper.pm: Print an ellipsis after "Including ApiDoc pod" to
	indicate that it might take some time to comlete.

2004/09/11 15:23 (-0400) muppetman

	* README, NEWS, Glib.pm: stable release 1.060

	* Makefile.PL: remove the "unstable" warning.

2004/08/29 14:19 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.055

2004/08/27 17:44 (-0400) rwmcfa1
